Тесты на auth сервис